<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, EQActivity!</string>
    <string name="balance_button_front">Front</string>
    <string name="balance_button_left">Left</string>
    <string name="balance_button_right">Right</string>
    <string name="balance_button_rear">Rear</string>
    <string name="balance_button_reset">Reset</string>
    <string name="eq_label_preamp">Preamp</string>
    <string name="eq_label_plus_20db" translatable="false">+20</string>
    <string name="eq_label_plus_15db" translatable="false">+15</string>
    <string name="eq_label_plus_7db" translatable="false">+7</string>
    <string name="eq_label_0db" translatable="false">0</string>
    <string name="eq_label_center_value" translatable="false">-</string>
    <string name="eq_label_frequency">Frequency</string>
    <string name="eq_label_q_hicut">Q / HiCut</string>
    <string name="eq_label_bass">Bass</string>
    <string name="eq_label_zero" translatable="false">0</string>
    <string name="eq_label_minus_20db" translatable="false">-20</string>
    <string name="eq_bass_f1" translatable="false">60</string>
    <string name="eq_bass_f2" translatable="false">80</string>
    <string name="eq_bass_f3" translatable="false">100</string>
    <string name="eq_bass_f4" translatable="false">120</string>
    <string name="eq_bass_q1" translatable="false">0.5</string>
    <string name="eq_bass_q2" translatable="false">1.0</string>
    <string name="eq_bass_q3" translatable="false">1.5</string>
    <string name="eq_bass_q4" translatable="false">2.0</string>
    <string name="eq_label_middle">Middle</string>
    <string name="eq_middle_f1" translatable="false">0k5</string>
    <string name="eq_middle_f2" translatable="false">1k0</string>
    <string name="eq_middle_f3" translatable="false">1k5</string>
    <string name="eq_middle_f4" translatable="false">2k5</string>
    <string name="eq_middle_q1" translatable="false">0.75</string>
    <string name="eq_middle_q2" translatable="false">1.0</string>
    <string name="eq_middle_q3" translatable="false">1.25</string>
    <string name="eq_middle_q4" translatable="false">1.5</string>
    <string name="eq_label_treble">Treble</string>
    <string name="eq_treble_f1" translatable="false">7k5</string>
    <string name="eq_treble_f2" translatable="false">10k</string>
    <string name="eq_treble_f3" translatable="false">12k5</string>
    <string name="eq_trenle_f4" translatable="false">15k</string>
    <string name="eq_treble_q1" translatable="false">0.75</string>
    <string name="eq_treble_q2" translatable="false">1.25</string>
    <string name="eq_label_loud">Loud</string>
    <string name="eq_loud_f1" translatable="false">250</string>
    <string name="eq_loud_f2" translatable="false">400</string>
    <string name="eq_loud_f3" translatable="false">800</string>
    <string name="eq_loud_h1" translatable="false">1</string>
    <string name="eq_loud_h2" translatable="false">2</string>
    <string name="eq_loud_h3" translatable="false">3</string>
    <string name="eq_loud_h4" translatable="false">4</string>
    <string name="eq_button_mute">Mute</string>
    <string name="eq_button_balance">Balance</string>
    <string name="eq_button_defaults">Defaults</string>
    <string name="eq_button_loud">Loud</string>
    <string name="eq_button_equalizer">Equalizer</string>
    <string name="eq_current_input_label">Input</string>

    <string name="app_name">EQ</string>
    <string name="low_voice">BASS</string>
    <string name="middle_voice">MID</string>
    <string name="high_voice">TRE</string>
    <string name="low_f">LPF</string>
    <string name="middle_f">MPF</string>
    <string name="high_f">HPF</string>
    <string name="reset">Reset</string>
    <string name="rock">Rock</string>
    <string name="classes">Classes</string>
    <string name="jazz">Jazz</string>
    <string name="fashion">Fashion</string>
    <string name="elec">Elec</string>
    <string name="flat">Flat</string>
    <string name="user">Option</string>
    <string name="balancer">Balancer</string>
    <string name="low_voice_value">0</string>
    <string name="middle_voice_value">0</string>
    <string name="high_voice_value">0</string>
    <string name="low_f_value">0Hz</string>
    <string name="middle_f_value">0kHz</string>
    <string name="high_f_value">0Hz</string>
    <string name="increase">Subwoofer</string>
    <string name="add">+0</string>
    <string name="equalizer">Equalizer</string>
    <string name="subwoofer">Subwoofer</string>
    <string name="loud">Loud</string>
    <string name="subwoofer_value">0</string>
    <string name="negative_twelve">-12</string>
    <string name="negative_eleven">-11</string>
    <string name="negative_ten">-10</string>
    <string name="negative_nine">-9</string>
    <string name="negative_eight">-8</string>
    <string name="negative_seven">-7</string>
    <string name="negative_six">-6</string>
    <string name="negative_five">-5</string>
    <string name="negative_four">-4</string>
    <string name="negative_there">-3</string>
    <string name="negative_two">-2</string>
    <string name="negative_one">-1</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fiveteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="ninteen">19</string>
    <string name="twenty">20</string>
    <string name="twenty_one">21</string>
    <string name="twenty_two">22</string>
    <string name="twenty_there">23</string>
    <string name="twenty_four">24</string>
    <string name="sixty">60HZ</string>
    <string name="eighty">80HZ</string>
    <string name="one_hundred">100HZ</string>
    <string name="two_hundred">200HZ</string>
    <string name="point_five_khz">0.5KHZ</string>
    <string name="one_khz">1KHZ</string>
    <string name="one_point_five_khz">1.5KHZ</string>
    <string name="two_point_five_khz">2.5KHZ</string>
    <string name="ten_khz">10KHZ</string>
    <string name="twelve_point_five_khz">12.5KHZ</string>
    <string name="fivteen_khz">15KHZ</string>
    <string name="seventeen_point_five_khz">17.5KHZ</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="BassQ">Bass Q -</string>
    <string name="BassFo">Bass Fo -</string>
    <string name="MiddleQ">Middle Q -</string>
    <string name="MiddleFo">Middle Fo -</string>
    <string name="TrebleQ">Treble Q -</string>
    <string name="TrebleFo">Treble Fo -</string>
</resources>
