<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="5.0dip"
    android:background="@drawable/sound_box"
    android:orientation="horizontal">

    <TextView
        android:id="@id/eq_music_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35.0dip"
        android:layout_marginTop="25.0dip"
        android:layout_weight="1.0"
        android:background="@drawable/music_eq_bg"
        android:gravity="center"
        android:text="@string/rock"
        android:textColor="@color/white"
        android:textSize="20.0sp" />

    <TextView
        android:id="@id/eq_music_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="25.0dip"
        android:layout_toRightOf="@id/eq_music_rock"
        android:layout_weight="1.0"
        android:background="@drawable/music_eq_bg"
        android:gravity="center"
        android:text="@string/classes"
        android:textColor="@color/white"
        android:textSize="20.0sp" />

    <TextView
        android:id="@id/eq_music_jazz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="25.0dip"
        android:layout_toRightOf="@id/eq_music_class"
        android:layout_weight="1.0"
        android:background="@drawable/music_eq_bg"
        android:gravity="center"
        android:text="@string/jazz"
        android:textColor="#ff00ff00"
        android:textSize="20.0sp" />

    <TextView
        android:id="@id/eq_music_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="25.0dip"
        android:layout_toRightOf="@id/eq_music_jazz"
        android:layout_weight="1.0"
        android:background="@drawable/music_eq_bg"
        android:gravity="center"
        android:text="@string/fashion"
        android:textColor="#ff00ff00"
        android:textSize="20.0sp" />

    <TextView
        android:id="@id/eq_music_flat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="25.0dip"
        android:layout_toRightOf="@id/eq_music_fashion"
        android:layout_weight="1.0"
        android:background="@drawable/music_eq_bg"
        android:gravity="center"
        android:text="@string/elec"
        android:textColor="#ff00ff00"
        android:textSize="20.0sp" />

    <TextView
        android:id="@id/eq_music_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="25.0dip"
        android:layout_toRightOf="@id/eq_music_flat"
        android:layout_weight="1.0"
        android:background="@drawable/music_eq_bg"
        android:gravity="center"
        android:text="@string/user"
        android:textColor="#ff00ff00"
        android:textSize="20.0sp" />
</LinearLayout>