<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/activity_background_rl"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@id/above_frame_bt_music_eq"
        android:layout_width="wrap_content"
        android:layout_height="340.0dip"
        android:layout_marginLeft="70.0dip"
        android:layout_marginTop="75.0dip"
        android:background="@drawable/sound_style_box_bg"
        android:orientation="horizontal">

        <cs2c.EQ.Controls.VerticalSeekBar
            android:id="@id/bt_music_vseekbar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="18dp"
            android:max="100"
            android:maxHeight="9dp"
            android:maxWidth="9dp"
            android:minHeight="9dp"
            android:minWidth="9dp"
            android:paddingRight="44dp"
            android:progress="60"
            android:progressDrawable="@drawable/bt_music_seekbar_style_db1"
            android:secondaryProgress="30"
            android:thumb="@drawable/sound_style_db"
            android:thumbOffset="28dp" />

        <cs2c.EQ.Controls.VerticalSeekBar
            android:id="@id/bt_music_vseekbar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="159dp"
            android:layout_marginTop="18dp"
            android:max="100"
            android:maxHeight="9dp"
            android:maxWidth="9dp"
            android:minHeight="9dp"
            android:minWidth="9dp"
            android:paddingRight="44dp"
            android:progress="50"
            android:progressDrawable="@drawable/bt_music_seekbar_style_db2"
            android:secondaryProgress="0"
            android:thumb="@drawable/sound_style_db"
            android:thumbOffset="26dp" />

        <cs2c.EQ.Controls.VerticalSeekBar
            android:id="@id/bt_music_vseekbar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="301dp"
            android:layout_marginTop="18dp"
            android:max="100"
            android:maxHeight="9dp"
            android:maxWidth="9dp"
            android:minHeight="9dp"
            android:minWidth="9dp"
            android:paddingRight="44dp"
            android:progress="40"
            android:progressDrawable="@drawable/bt_music_seekbar_style_db3"
            android:secondaryProgress="0"
            android:thumb="@drawable/sound_style_db"
            android:thumbOffset="26dp" />

        <ImageView
            android:id="@id/music_eq_seekbar_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <cs2c.EQ.Controls.VerticalSeekBar
            android:id="@id/bt_loud_vseekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="409.0dip"
            android:layout_marginTop="15.0dip"
            android:max="100"
            android:maxHeight="9.0dip"
            android:maxWidth="9.0dip"
            android:minHeight="9.0dip"
            android:minWidth="9.0dip"
            android:paddingRight="35.0dip"
            android:progress="30"
            android:progressDrawable="@drawable/bt_music_seekbar_style_2"
            android:secondaryProgress="0"
            android:thumb="@drawable/sound_style_db"
            android:thumbOffset="26.0dip" />


    </RelativeLayout>

    <TextView
        android:id="@id/bt_loud_text_top"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="510.0dip"
        android:layout_marginTop="20.0dip"
        android:gravity="center_horizontal"
        android:shadowColor="#b0000000"
        android:shadowRadius="2.0"
        android:text="@string/subwoofer"
        android:textColor="@color/white"
        android:textSize="20.0sp"
        android:visibility="visible" />

    <TextView
        android:id="@id/bt_loud_text_tottom"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="510.0dip"
        android:layout_marginTop="435.0dip"
        android:gravity="center_horizontal"
        android:shadowColor="#b0000000"
        android:shadowRadius="2.0"
        android:text="@string/subwoofer_value"
        android:textColor="@color/white"
        android:textSize="20.0sp"
        android:visibility="visible" />

    <Switch
        android:id="@id/loud_sw"
        android:layout_width="150.0dip"
        android:layout_height="90.0dip"
        android:layout_marginLeft="716.0dip"
        android:layout_marginTop="237.0dip"
        android:shadowColor="#b0000000"
        android:shadowRadius="2.0"
        android:text="@string/loud"
        android:textColor="@color/white"
        android:textSize="20.0sp" />
    />

    <RelativeLayout
        android:id="@id/text_frame_bt_music_eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="45.0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/bt_music_text_low_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:shadowColor="#b0000000"
                    android:shadowRadius="2.0"
                    android:text="@string/low_voice"
                    android:textColor="@color/white"
                    android:textSize="20.0sp" />

                <TextView
                    android:id="@id/bt_music_text_middle_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:shadowColor="#b0000000"
                    android:shadowRadius="2.0"
                    android:text="@string/middle_voice"
                    android:textColor="@color/white"
                    android:textSize="20.0sp" />

                <TextView
                    android:id="@id/bt_music_text_high_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:shadowColor="#b0000000"
                    android:shadowRadius="2.0"
                    android:text="@string/high_voice"
                    android:textColor="@color/white"
                    android:textSize="20.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="80.0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="invisible">

                <TextView
                    android:id="@id/bt_music_text_low_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:shadowColor="#b0000000"
                    android:shadowRadius="2.0"
                    android:text="@string/low_f"
                    android:textColor="@color/white"
                    android:textSize="20.0sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@id/bt_music_text_middle_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:shadowColor="#b0000000"
                    android:shadowRadius="2.0"
                    android:text="@string/middle_f"
                    android:textColor="@color/white"
                    android:textSize="20.0sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@id/bt_music_text_high_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:shadowColor="#b0000000"
                    android:shadowRadius="2.0"
                    android:text="@string/high_f"
                    android:textColor="@color/white"
                    android:textSize="20.0sp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="45.0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/text_frame_bt_music_eq_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45.0dip"
        android:layout_marginTop="435.0dip"
        android:orientation="horizontal">

        <TextView
            android:id="@id/bt_music_text_low_voice_value"
            android:layout_width="50.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40.0dip"
            android:gravity="center_horizontal"
            android:shadowColor="#b0000000"
            android:shadowRadius="2.0"
            android:text="@string/low_voice_value"
            android:textColor="@color/white"
            android:textSize="20.0sp" />

        <TextView
            android:id="@id/bt_music_text_middle_voice_value"
            android:layout_width="50.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="91.0dip"
            android:layout_toRightOf="@id/bt_music_text_low_voice_value"
            android:gravity="center_horizontal"
            android:shadowColor="#b0000000"
            android:shadowRadius="2.0"
            android:text="@string/middle_voice_value"
            android:textColor="@color/white"
            android:textSize="20.0sp" />

        <TextView
            android:id="@id/bt_music_text_high_voice_value"
            android:layout_width="50.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95.0dip"
            android:layout_toRightOf="@id/bt_music_text_middle_voice_value"
            android:gravity="center_horizontal"
            android:shadowColor="#b0000000"
            android:shadowRadius="2.0"
            android:text="@string/high_voice_value"
            android:textColor="@color/white"
            android:textSize="20.0sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@id/below_frame_bt_music_eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_frame_bt_music_eq_value"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="5.0dip"
        android:background="@drawable/sound_style_box_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@id/bt_music_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/sound_style_button"
            android:gravity="center"
            android:shadowColor="#b0000000"
            android:shadowRadius="2.0"
            android:text="@string/rock"
            android:textColor="@drawable/button_font_style"
            android:textSize="20.0sp" />

        <TextView
            android:id="@id/bt_music_balancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/bt_music_rock"
            android:background="@drawable/sound_style_button"
            android:gravity="center"
            android:shadowColor="#b0000000"
            android:shadowRadius="2.0"
            android:text="@string/balancer"
            android:textColor="@drawable/button_font_style"
            android:textSize="20.0sp" />

        <TextView
            android:id="@id/bt_music_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bt_music_balancer"
            android:background="@drawable/sound_style_button"
            android:gravity="center"
            android:shadowColor="#b0000000"
            android:shadowRadius="2.0"
            android:text="@string/reset"
            android:textColor="@drawable/button_font_style"
            android:textSize="20.0sp" />

        <TextView
            android:id="@id/bt_music_advanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/bt_music_reset"
            android:background="@drawable/sound_style_button"
            android:gravity="center"
            android:shadowColor="#b0000000"
            android:shadowRadius="2.0"
            android:text="Advanced"
            android:textColor="@drawable/button_font_style"
            android:textSize="20.0sp" />

    </RelativeLayout>

</RelativeLayout>