<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/activity_background_rl"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@id/music_balancer_left_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35.0dip"
        android:layout_marginTop="30.0dip"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@id/music_balancer_seekbar_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60.0dip"
            android:layout_marginTop="90.0dip"
            android:background="@drawable/box_bg">

            <TextView
                android:id="@id/music_balancer_balancer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="170.0dip"
                android:layout_marginTop="10.0dip"
                android:textColor="@color/white"
                android:textSize="25.0sp" />

            <TextView
                android:id="@id/music_balancer_increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100.0dip"
                android:layout_marginTop="90.0dip"
                android:text="@string/increase"
                android:textColor="@color/white"
                android:textSize="25.0sp" />

            <TextView
                android:id="@id/music_balancer_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/music_balancer_increase"
                android:layout_marginLeft="120.0dip"
                android:layout_toRightOf="@id/music_balancer_increase"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="25.0sp" />

            <RelativeLayout
                android:id="@id/text_frame_bt_music_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33.0dip"
                android:layout_marginTop="160.0dip"
                android:background="@drawable/line_bg">

                <SeekBar
                    android:id="@id/music_balancer_seekbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="366.0dip"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:maxHeight="20.0dip"
                    android:maxWidth="20.0dip"
                    android:minHeight="20.0dip"
                    android:minWidth="20.0dip"
                    android:paddingLeft="20.0dip"
                    android:paddingRight="4.0dip"
                    android:progress="0"
                    android:progressDrawable="@drawable/music_balancer_seekbar_style"
                    android:thumb="@drawable/dot"
                    android:thumbOffset="23.0dip" />
            </RelativeLayout>
        </RelativeLayout>

        <AbsoluteLayout
            android:id="@id/music_balancer_right_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="580.0dip"
            android:layout_marginTop="0.0dip"
            android:background="@drawable/car">

            <ImageView
                android:id="@id/music_balancer_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125.0dip"
                android:layout_marginTop="145.0dip"
                android:background="@drawable/car_dot" />
        </AbsoluteLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/music_balancer_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/music_balancer_left_frame"
        android:layout_marginLeft="50.0dip"
        android:layout_marginTop="20.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@id/music_equalizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170.0dip"
            android:background="@drawable/sound_style_balancer_bg"
            android:gravity="center"
            android:text="@string/equalizer"
            android:textColor="@drawable/button_font_style"
            android:textSize="20.0sp" />

        <TextView
            android:id="@id/music_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40.0dip"
            android:layout_toRightOf="@id/music_equalizer"
            android:background="@drawable/sound_style_balancer_bg"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@drawable/button_font_style"
            android:textSize="20.0sp" />
    </RelativeLayout>
</LinearLayout>